[tool.poetry]
name = "stork_proxy"
version = "0.1.0"
description = ""
authors = ["alex.oleshkevich <alex.oleshkevich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.14.3"
starlette = "^0.13.8"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
